add openapi for unfollow a user
